<resources>
    <string name="app_name" translatable="false">E1.2_Sergio_Ezquerro</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="Subtract" translatable="false">-</string>
    <string name="Add" translatable="false">+</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_it_correct">Is it correct?</string>
    <string name="email_subject">Order Confirmation</string>
    <string name="Correct_your_order">Correct your order</string>
</resources>