<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EditText_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/enter_your_name" />

    <TextView
        android:id="@+id/textView_Topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/topping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Name" />

    <CheckBox
        android:id="@+id/checkBox_Toppings_WhippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="10dp"
        android:text="@string/whipped_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Topping" />

    <CheckBox
        android:id="@+id/checkBox_Toppings_Chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox_Toppings_WhippedCream"
        android:padding="10dp"
        android:text="@string/chocolate"
        app:layout_constraintStart_toStartOf="@+id/checkBox_Toppings_WhippedCream"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Toppings_WhippedCream" />

    <TextView
        android:id="@+id/textView_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Toppings_Chocolate" />


    <Button
        android:id="@+id/button_SubtractCounter"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:onClick="subtractCount"
        android:padding="10dp"
        android:text="@string/Subtract"
        app:layout_constraintEnd_toStartOf="@+id/textView_Counter"
        app:layout_constraintTop_toBottomOf="@+id/textView_Quantity" />

    <TextView
        android:id="@+id/textView_Counter"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_SubtractCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_AddCounter"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="addCount"
        android:padding="10dp"
        android:text="@string/Add"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Counter"
        app:layout_constraintStart_toEndOf="@+id/textView_Counter" />

    <TextView
        android:id="@+id/textView_orderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/order_summary"
        app:layout_constraintBottom_toTopOf="@+id/button_Order"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="order"/>

</androidx.constraintlayout.widget.ConstraintLayout>